@@ -1,0 +1,80 @@
+# Automatically generated by php-weathermap v0.93
+
+WIDTH 800
+HEIGHT 600
+
+
+
+KEYPOS DEFAULT -1 -1 Traffic Load
+KEYTEXTCOLOR 0 0 0
+KEYBGCOLOR 255 255 255
+BGCOLOR 255 255 255
+TITLECOLOR 0 0 0
+TIMECOLOR 0 0 0
+SCALE DEFAULT 1 10   140 0 255
+SCALE DEFAULT 10 25   32 32 255
+SCALE DEFAULT 25 40   0 192 255
+SCALE DEFAULT 40 55   0 240 0
+SCALE DEFAULT 55 70   240 240 0
+SCALE DEFAULT 70 85   255 192 0
+SCALE DEFAULT 85 100   255 0 0
+
+
+# End of global section
+
+# DEFAULT definitions:
+NODE DEFAULT
+	MAXVALUE 100
+
+LINK DEFAULT
+	WIDTH 4
+	BANDWIDTH 100M
+
+
+# End of DEFAULTS section
+
+# Node definitions:
+NODE node20108
+	LABEL NODE
+	POSITION 257 336
+
+NODE node80111
+	LABEL NODE
+	POSITION 511 305
+
+NODE node00342
+	LABEL Node
+	POSITION 515 127
+
+NODE node00352
+	LABEL Node
+	POSITION 385 83
+
+NODE node00364
+	LABEL Node ({node:this:cacti_availability)%) {node:this:cacti_curtime}
+	TARGET cactihost:1
+	POSITION 62 260
+
+
+# End of NODE section
+
+# Link definitions:
+LINK node00364-node20108
+	NODES node00364 node20108
+
+LINK node00352-node00342
+	NODES node00352 node00342
+
+LINK node00342-node80111
+	NODES node00342 node80111
+
+LINK node20108-node00342
+	NODES node20108 node00342
+
+LINK node00364-node00352
+	NODES node00364 node00352
+
+
+# End of LINK section
+
+# That's All Folks!
