@@ -4,6 +4,9 @@
         ADDED - unique code for each warning message, and a page to explain it on the website. Ugh.
         ADDED - warning in editor file-selector so you can tell if the file is read-only
 	ADDED - click config filename to edit in editor from Cacti (thanks to streaker69)
+        FIXED - editor-generated node names are a bit shorter (and easier to read) now.
+        FIXED - keyboard focus switches nicely to the popup dialogs now.
+        ADDED - cactihost: DS plugin fetches a bunch of other stats from Cacti's DB now, too (like availability and response times)
 
 0.92 - FIXED weathermap CLI help said --random-data instead of --randomdata
        FIXED one last php short_tag in poller_common.php - thanks Bernado Diez
